# DPC

./: .gitignore  LICENSE  README.md  config.toml.example  main.py  pyproject.toml  requirements.txt
baseline/: common.py  run_dpc_selection.py  run_ex_guided_selection.py  run_majority_analysis.py  run_mcs_selection.py  run_mcs_selection_wo_execution.py  run_mdd_generation.py  run_mdd_posthoc_stats.py  run_random_selection.py  run_sc_selection.py  run_solver_reliability_experiment.py  run_sql_generation.py  run_sql_generation_with_omnisql.py  run_sql_generation_with_xiyan.py  run_usc_selection.py
dpc/agents/: __init__.py  base_agent.py  selector_agent.py  slicer_agent.py  solver_agent.py  tester_agent.py
dpc/config/: __init__.py  settings.py
dpc/core/: __init__.py  clustering.py  pipeline.py
dpc/datasets/: __init__.py  base_dataset.py  bird_loader.py  spider_loader.py
dpc/eval/: __init__.py  metrics.py
dpc/llm/: __init__.py  base_llm.py  openai_llm.py
dpc/prompts/: __init__.py  factory.py  selector_prompts.py  slicer_prompts.py  solver_prompts.py  tester_prompts.py
dpc/utils/: __init__.py  clustering.py  db_utils.py  python_executor.py  response_parser.py  schema_utils.py
evaluation/: eval_ex.py  eval_pass_n.py
results/analysis/: qwen2.5-coder-7b-instruct_BIRD_Mini_Dev_N11.json  (+17 more)
scripts/: run_candidates_analysis.sh  run_dpc_selection.sh  run_eval_ex.sh  run_ex_guided_selection.sh  run_gen_baseline.sh  run_gen_omnisql.sh  run_gen_xiyan.sh  run_majority_analysis.sh  run_mcs_selection.sh  run_pass_n_eval.sh  run_random_selection.sh  run_sc_selection.sh
(+60 files in other folders)
